@@ -1,5 +1,7 @@
 iowow (1.4.14) UNRELEASED; urgency=medium
 
+  * Fixed incorrect selection of `strerror_r` for musl builds.
+  * Set appropriate _XOPEN_SOURCE=700 level for `nftw` (unix.c)
   * iwxstr_printf() now conforms to stdlib printf function (iwxstr.h)
   * Moved some useful defs from iwutil.h into basedefs.h
   * Fixed iwre_match() function signatute allowing `const  char* input`
